<resources>
    <string name="app_name">MobileFinal</string>
    <string name="title_add_image">Add image</string>
    <string name="title_finish">Finish</string>
    <string name="title_login">Login</string>
    <string name="title_logout">Logout</string>
    <string name="title_sign_up">Sign up</string>
    <string name="title_register">Register</string>
    <string name="title_forgot_password">Forgot password?</string>
    <string name="title_return">Return</string>
    <string name="title_play_again">Play again</string>
    <string name="title_enter_email">Enter email</string>
    <string name="title_enter_password">Enter password</string>
    <string name="title_confirm_password">Confirm password</string>
    <string name="title_highscores">Highscores Table</string>
</resources>