<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textAlignment="center"
        android:textColor="@color/light_yellow"
        android:textSize="54sp"
        android:layout_marginBottom="5sp"
        app:layout_constraintBottom_toTopOf="@+id/ll_edit_texts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ll_edit_texts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/title_enter_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/light_yellow"
            android:textColorHint="@color/light_yellow" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/title_enter_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:longClickable="false"
                android:textAlignment="center"
                android:textColor="@color/light_yellow"
                android:textColorHint="@color/light_yellow" />

            <ImageView
                android:id="@+id/iv_password_visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_show_password"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="40dp"/>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_edit_texts">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/orange"
            android:text="@string/title_login" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/orange"
            android:text="@string/title_sign_up" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>